[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/MenuScene/MenuScene.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Start" type="Button" parent="."]
margin_left = 357.982
margin_top = 264.625
margin_right = 687.982
margin_bottom = 356.625
rect_pivot_offset = Vector2( 11.8101, 10 )
action_mode = 0
text = "Start"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 360.051
margin_top = 402.949
margin_right = 691.051
margin_bottom = 495.949
text = "Quit"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="+" type="Button" parent="."]
margin_left = 737.032
margin_top = 269.146
margin_right = 778.032
margin_bottom = 301.146
rect_pivot_offset = Vector2( 20.5, 16 )
text = "+"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="-" type="Button" parent="."]
margin_left = 737.01
margin_top = 312.491
margin_right = 778.01
margin_bottom = 346.491
text = "-"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NbOfPlayer" type="Label" parent="."]
margin_left = 795.119
margin_top = 284.265
margin_right = 852.119
margin_bottom = 327.265
text = "2"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
[connection signal="button_down" from="+" to="." method="plus_on__button_down"]
[connection signal="button_down" from="-" to="." method="minus_on__button_down"]
